[package]
name = "modbusserver"
version = "0.1.0"
authors = ["Douwe Faber <douwe.faber@xyleminc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "*"
tokio-modbus = { version = "*", default-features = false, features = ["tcp-server-unstable", "tcp", "server"] }
